// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/dropdown/demo/basic.js correctly test 1`] = `
<a
  class="jc-dropdown-link jc-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="jcicon jcicon-down "
  />
</a>
`;

exports[`renders ./components/dropdown/demo/context-menu.js correctly test 1`] = `
<span
  class="jc-dropdown-trigger"
  style="user-select:none"
>
  Right Click on Me
</span>
`;

exports[`renders ./components/dropdown/demo/dropdown-button.js correctly test 1`] = `
<div>
  <div
    class="jc-btn-group jc-dropdown-button"
  >
    <button
      class="jc-btn jc-btn-default"
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="jc-btn jc-dropdown-trigger jc-btn-default"
      type="button"
    >
      <i
        class="jcicon jcicon-down "
      />
    </button>
  </div>
  <div
    class="jc-btn-group jc-dropdown-button"
    style="margin-left:8px"
  >
    <button
      class="jc-btn jc-btn-default"
      disabled=""
      type="button"
    >
      <span>
        Dropdown
      </span>
    </button>
    <button
      class="jc-btn jc-dropdown-trigger jc-btn-default"
      disabled=""
      type="button"
    >
      <i
        class="jcicon jcicon-down "
      />
    </button>
  </div>
  <button
    class="jc-btn jc-dropdown-trigger"
    style="margin-left:8px"
    type="button"
  >
    <span>
      Button 
    </span>
    <i
      class="jcicon jcicon-down "
    />
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/event.js correctly test 1`] = `
<a
  class="jc-dropdown-link jc-dropdown-trigger"
  href="#"
>
  Hover me, Click menu item 
  <i
    class="jcicon jcicon-down "
  />
</a>
`;

exports[`renders ./components/dropdown/demo/item.js correctly test 1`] = `
<a
  class="jc-dropdown-link jc-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="jcicon jcicon-down "
  />
</a>
`;

exports[`renders ./components/dropdown/demo/overlay-visible.js correctly test 1`] = `
<a
  class="jc-dropdown-link jc-dropdown-trigger"
  href="#"
>
  Hover me 
  <i
    class="jcicon jcicon-down "
  />
</a>
`;

exports[`renders ./components/dropdown/demo/placement.js correctly test 1`] = `
<div>
  <button
    class="jc-btn jc-dropdown-trigger"
    type="button"
  >
    <span>
      bottomLeft
    </span>
  </button>
  <button
    class="jc-btn jc-dropdown-trigger"
    type="button"
  >
    <span>
      bottomCenter
    </span>
  </button>
  <button
    class="jc-btn jc-dropdown-trigger"
    type="button"
  >
    <span>
      bottomRight
    </span>
  </button>
  <br />
  <button
    class="jc-btn jc-dropdown-trigger"
    type="button"
  >
    <span>
      topLeft
    </span>
  </button>
  <button
    class="jc-btn jc-dropdown-trigger"
    type="button"
  >
    <span>
      topCenter
    </span>
  </button>
  <button
    class="jc-btn jc-dropdown-trigger"
    type="button"
  >
    <span>
      topRight
    </span>
  </button>
</div>
`;

exports[`renders ./components/dropdown/demo/sub-menu.js correctly test 1`] = `
<a
  class="ant-dropdown-link jc-dropdown-trigger"
  href="#"
>
  Cascading menu 
  <i
    class="jcicon jcicon-down "
  />
</a>
`;

exports[`renders ./components/dropdown/demo/trigger.js correctly test 1`] = `
<a
  class="jc-dropdown-link jc-dropdown-trigger"
  href="#"
>
  Click me 
  <i
    class="jcicon jcicon-down "
  />
</a>
`;
